[gd_scene load_steps=13 format=3 uid="uid://dmiroqi0hq153"]

[ext_resource type="Script" path="res://Scenes/Actors/Enemy/Ogre_Mage.gd" id="1_p4442"]
[ext_resource type="Texture2D" uid="uid://w6lhvvtmt7x" path="res://Assets/Sprites/OgreMage.png" id="2_plvtc"]
[ext_resource type="PackedScene" uid="uid://civnk7ofms1at" path="res://Scenes/Weapons/MageStaff/MageStaff.tscn" id="3_y34al"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aeq8e"]
size = Vector2(69, 64)

[sub_resource type="Animation" id="Animation_btwsu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_nh7p6"]
resource_name = "idle_left"
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rue0d"]
resource_name = "idle_right"
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m82so"]
resource_name = "walking_left"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7neax"]
resource_name = "walking_right"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_m6yog"]
resource_name = "walking_up"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(2, 1), Vector2i(3, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pa7qr"]
_data = {
"RESET": SubResource("Animation_btwsu"),
"idle_left": SubResource("Animation_nh7p6"),
"idle_right": SubResource("Animation_rue0d"),
"walking_left": SubResource("Animation_m82so"),
"walking_right": SubResource("Animation_7neax"),
"walking_up": SubResource("Animation_m6yog")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8os5"]
size = Vector2(18.7755, 9.11705)

[node name="Ogre_Mage" type="CharacterBody2D"]
texture_filter = 1
position = Vector2(43, -8)
collision_layer = 16
collision_mask = 116
script = ExtResource("1_p4442")
hp = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(19.5, 8)
shape = SubResource("RectangleShape2D_aeq8e")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(18, 8)
scale = Vector2(4.5, 4)
texture = ExtResource("2_plvtc")
hframes = 4
vframes = 2
frame = 4
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pa7qr")
}

[node name="MageStaff" parent="." instance=ExtResource("3_y34al")]
position = Vector2(-19, -24)

[node name="BulletDetector" type="Area2D" parent="."]
scale = Vector2(2.11871, -1.34176)
collision_layer = 16
collision_mask = 116
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletDetector"]
position = Vector2(6.13581, -9.22296)
scale = Vector2(1.20664, 3.33118)
shape = SubResource("RectangleShape2D_d8os5")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="shooting" from="." to="MageStaff" method="_on_shooting"]
[connection signal="body_entered" from="BulletDetector" to="." method="_on_bullet_detector_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
